<resources>
    <string name="app_name">No Name</string>
    <string name="first_name">First Name</string>
    <string name="user_registration">User Registration</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registred_signin">Already Registred? Sign In</string>
    <string name="back">Back</string>

    <string-array name="gender_options">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="log_in">Login</string>
    <string name="don_t_have_an_account_register">Don\'t Have an Account? Register.</string>
    <string name="logout">Logout</string>
    <string name="name">Name = </string>
    <string name="user_name">User Name</string>
    <string name="email_">Email =</string>
    <string name="phone_">Phone =</string>
    <string name="gender_">Gender =</string>
    <string name="select_gender">Select Gender</string>
    <string name="gallery">Gallery</string>
    <string name="delete_account">Delete account</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
</resources>