<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/userRegistrationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/user_registration"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:fitsSystemWindows="true"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/firstNameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:hint="@string/first_name"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="3dp"
                        app:boxStrokeWidthFocused="2dp"
                        app:counterMaxLength="16"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/firstNameInput"
                            android:maxLines="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/lastNameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:hint="@string/last_name"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="3dp"
                        app:boxStrokeWidthFocused="2dp"
                        app:counterMaxLength="16"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/lastNameInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:hint="@string/email"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="3dp"
                        app:boxStrokeWidthFocused="2dp"
                        app:counterMaxLength="16"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phoneLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:hint="@string/phone"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="3dp"
                        app:boxStrokeWidthFocused="2dp"
                        app:counterMaxLength="16"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phoneInput"
                            android:inputType="phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="10" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/genderLayout"
                        android:layout_width="match_parent"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:hint="@string/gender"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="3dp"
                        app:boxStrokeWidthFocused="2dp"
                        app:counterMaxLength="16"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/black">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/genderInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:padding="15dp"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:hint="@string/password"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="3dp"
                        app:boxStrokeWidthFocused="2dp"
                        app:counterMaxLength="16"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/black"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/confirmPasswordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:hint="@string/confirm_password"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="3dp"
                        app:boxStrokeWidthFocused="2dp"
                        app:counterMaxLength="16"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/black"
                        app:passwordToggleEnabled="true">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/confirmPasswordInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <Button
                        android:id="@+id/signUpBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_up"
                        android:layout_marginHorizontal="30dp"
                        android:textSize="18sp"
                        android:backgroundTint="@android:color/holo_blue_light" />

                    <TextView
                        android:id="@+id/signInBtnFromSignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/already_registred_signin"
                        android:textAlignment="center"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="5dp" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>