<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white"
    tools:context=".Login">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:fitsSystemWindows="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:hint="@string/email"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="3dp"
                        app:boxStrokeWidthFocused="2dp"
                        app:counterMaxLength="16"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:hint="@string/password"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="3dp"
                        app:boxStrokeWidthFocused="2dp"
                        app:counterMaxLength="16"
                        app:errorEnabled="true"
                        app:hintTextColor="@color/black"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <Button
                        android:id="@+id/signInBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:backgroundTint="@android:color/holo_blue_light"
                        android:text="@string/log_in"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/signUpBtnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="5dp"
                        android:text="@string/don_t_have_an_account_register"
                        android:textAlignment="center" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>